# spectralio

./: .gitignore  README.md  pyproject.toml
src/spectralio/: __init__.py  _errors.py  custom_types.py  geospatial_models.py  reading.py  shapefiles.py  spec1D_models.py  spec3D_models.py  specgroup_models.py  writing.py  wvl_models.py
