[project]
name = "spectralio"
version = "0.1.4"
description = "Python-Optimized file formats for spectral data"
authors = [
    {name = "Z.M. Vig",email = "zvig@umd.edu"}
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "pydantic (>=2.12.4,<3.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "types-shapely (>=2.1.0.20250917,<3.0.0.0)",
    "alphashape (>=1.3.1,<2.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "fiona (>=1.10.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
